# jarvis-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
jarvis/: __init__.py  cli.py  version.py
jarvis/commands/: __init__.py  codex.py  context.py  diagnose.py  docs.py  health.py  logs.py  onboard.py  recover.py  repair.py  restart.py  status.py
jarvis/lib/: __init__.py  _tomlwrite.py  agent_instructions.py  dispatch.py  docs_refresh.py  health.py  macos.py  output.py  platform.py  services.py  setup_config.py  ssh_wrapper.py  tailscale.py
scripts/: build-docs-bundle.sh  install.sh  pull-openclaw-docs.sh
tests/: conftest.py  test_codex_install.py  test_dispatch.py  test_docs_refresh.py  test_onboard.py  test_setup_config.py  test_ssh_wrapper.py  test_state_change_yes.py  test_tailscale.py
