[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis-cli"
version = "0.3.0"
description = "Operator + LLM debugging tool for Jarvis (the JarvisClaw appliance product). Wraps an OpenClaw install with a queryable CLI surface and embedded canonical docs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "JarvisClaw", email = "alex@edge-fund.io" },
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "platformdirs>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
jarvis = "jarvis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["jarvis"]
# docs_bundle/ is automatically included because it lives inside the jarvis/
# package. Hatchling picks up all non-Python files in the package by default.

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
